Wrap month and year divs to avoid overflow
Problem:

A missing CSS rule was causing the month and year selectors
to overflow their container div.

Solution:

Add `white-space: normal` to `td`s in the datetime picker element.
This fixes the wrapping.

--- a/app/assets/stylesheets/datetime_picker.scss
+++ b/app/assets/stylesheets/datetime_picker.scss
@@ -289,6 +289,7 @@
 .bootstrap-datetimepicker-widget table td {
   height: 54px;
   line-height: 54px;
+  white-space: normal;
   width: 54px;
 }
 .bootstrap-datetimepicker-widget table td.cw {
